# Simionic-G1000-MSFS2024-Bluetooth-Bridge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  G1000NXi_with_GMC_710_SHB_commands.map  Pilatus_PC-12Honeywell_Primus_Apex_SHB_commands.map  SHB1000.config  SHB1000_commands.map  SHB1000_known_devices.config  default.bleconfig  readme.md
apps/: SHB1000_MSFS2024_BLE_Bridge_main.cpp  ble_scanner_main.cpp  msfs_ble_bridge_main.cpp
cmake/FSUIPC_WAPI_wrapper/: CMakeLists.txt
src/: ble_session.cpp  ble_session.h
